# HUML_Opdrachten

./: .gitignore  MakeFile  pyproject.toml
notebooks/: 01_explore.ipynb
src/data/: make_dataset.py
