[tool.poetry]
name = "huml-opdrachten"
version = "0.1.0"
description = ""
authors = ["Ypjaheesakkers <petter.heesakkers@student.hu.nl>"]
readme = "README.md"
packages = [{include = "huml_opdrachten"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.0"
loguru = "^0.6.0"
pandas = "^1.5.2"
gin-config = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
